# lspleanklib

./: README.md  justfile  pyproject.toml
docs/: leank-lsp.md
lspleanklib/: __init__.py  __main__.py  aio.py  cli.py  jsonrpc.py  lake.py  lakelspout.py  lspleank.py  server.py  util.py
tests/: prep_lake_package_artifacts.sh  test_lake.py  test_rpc.py  test_server.py  util.py
tests/cases/: vim9-lsp-init.txt
tests/cases/alt_import/: Min.lean
tests/cases/alt_import/Min/: Sub.lean
