[build-system]
requires = ["setuptools >= 69.0.3", "setuptools_scm[simple] >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "lspleanklib"
dynamic = ["version"]
authors = [{name = "Castedo Ellerman", email = "castedo@castedo.com"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
]
keywords = ["lsp", "language-server-protocol","jsonrpc"]

[tool.setuptools_scm]
version_file = "_version.py"

[dependency-groups]
test = [
    "pytest >= 8",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = false

[tool.ruff.lint]
ignore = [
    "E401",  # Multiple imports on one line
]
