[build-system]
requires = ["setuptools >= 69.0.3", "setuptools_scm[simple] >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "lspleanklib"
dynamic = ["version"]
description = "LSP proxy and library to link LSP-enabled editors to Lake LSP servers"
readme = "README.md"
authors = [{name = "Castedo Ellerman", email = "castedo@castedo.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
]
keywords = ["lean", "lsp", "language-server-protocol", "jsonrpc"]

[project.optional-dependencies]
crossplatform = ["platformdirs"]

[project.scripts]
lspleank = "lspleanklib.lspleank:main"
lakelspout = "lspleanklib.lakelspout:main"

[tool.setuptools_scm]
version_file = "_version.py"

[dependency-groups]
test = [
    "pytest >= 8",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
pythonpath = ["."]
markers = ['slow']

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = false

[tool.ruff.lint]
ignore = [
    "E401",  # Multiple imports on one line
    "E712",  # Avoid equality comparisons to `True`
]
